--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,9 @@ pillow>=10.0.0
 pyyaml>=6.0
 tqdm>=4.66.0
 
+# Training/eval metrics
+scikit-learn>=1.3.0
+
 # Optional (only needed for data-backed loader smoke / training)
 webdataset>=0.2.86
 
