--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
 ]
 
 [tool.setuptools]
-packages = ["classifier_NN", "classifier_SVM", "classifier_VGG", "preprocessing"]
+packages = { find = { include = ["classifier_NN*"] } }
 
 
 
