--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,9 @@ tqdm>=4.66.0
 # Training/eval metrics
 scikit-learn>=1.3.0
 
+# Plotting (used by analysis/eval scripts like A2)
+matplotlib>=3.7.0
+
 # Optional (only needed for data-backed loader smoke / training)
 webdataset>=0.2.86
 
