Add 3-seed Swin rerun Slurm arrays; extend checkpoint reevaluator

--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,9 @@ venv.bak/
 # VSCode
 .vscode/
 
+# Copilot Chat local instructions (keep local-only)
+copilot-instructions.md
+
 # Spyder
 .spyderproject
 .spyproject
